--- a/.github/workflows/npm-build-and-deploy-develop.yml
+++ b/.github/workflows/npm-build-and-deploy-develop.yml
@@ -3,7 +3,7 @@ name: Continuous Delivery and Deployment
 
 on:
     push:
-        branches: [develop]
+        branches: [ioxbank]
 
 jobs:
     build:
@@ -21,15 +21,3 @@ jobs:
                   node-version: ${{ matrix.node-version }}
             - run: npm ci
             - run: npm run build-hash
-            - name: Create CNAME file
-              uses: finnp/create-file-action@master
-              env:
-                  FILE_NAME: build/hash-history/CNAME
-                  FILE_DATA: develop.bitshares.org
-            - name: Deploy
-              uses: s0/git-publish-subdir-action@master
-              env:
-                  REPO: git@github.com:bitshares/develop.bitshares.org.git
-                  BRANCH: master
-                  FOLDER: build/hash-history
-                  SSH_PRIVATE_KEY: ${{ secrets.AUTOMATION_UI_DEPLOYMENT_KEY }}
