--- a/.github/workflows/npm-build-and-deploy-develop.yml
+++ b/.github/workflows/npm-build-and-deploy-develop.yml
@@ -19,10 +19,6 @@ jobs:
                   node-version: ${{ matrix.node-version }}
             - run: npm ci
             - run: npm run build-hash
-            - name: 'Tar files'
-            run: tar -cvf dist.tar /home/runner/work/bitshares-ui/bitshares-ui/build/dist
-            - name: 'Upload Artifact'
-                uses: actions/upload-artifact@v2
-                with:
+            - run: tar -cvf dist.tar /home/runner/work/bitshares-ui/bitshares-ui/build/dist
                 name: my-artifact
                 path: dist.tar   
