--- a/.github/workflows/npm-build-and-deploy-develop.yml
+++ b/.github/workflows/npm-build-and-deploy-develop.yml
@@ -18,5 +18,15 @@ jobs:
               with:
                   node-version: ${{ matrix.node-version }}
             - run: npm ci
-            - run: npm run build-hash
-            - run: tar -cvf dist.tar ./build/dist
+            - run: npm run build
+            - run: |
+            cd ..
+            mkdir downloads
+            cp -r bitshares-ui/build/dist/* downloads
+            cd ..
+            - name: Step 3 - Use the Upload Artifact GitHub Action
+               uses: actions/upload-artifact@v2
+                with: 
+                 name: assets-for-download
+                 path: downloads
+            
