--- a/.github/workflows/npm-build-and-deploy-develop.yml
+++ b/.github/workflows/npm-build-and-deploy-develop.yml
@@ -19,13 +19,10 @@ jobs:
                   node-version: ${{ matrix.node-version }}
             - run: npm ci
             - run: npm run build
-            - name: Step 1 - Create a temporary artifact downloads folder
-                run: mkdir downloads
-            - name: step 2 - Add artifacts to publish to the temp folder
-              run: |
+            - run: mkdir downloads
+            - run: |
                  cp -r bitshares-ui/build/dist/* downloads
                  cd ..
-            - name: Step 3 - Use the Upload Artifact GitHub Action
                 uses: actions/upload-artifact@v2
                 with: 
                   name: assets-for-download
