--- a/.github/workflows/npm-build-and-deploy-develop.yml
+++ b/.github/workflows/npm-build-and-deploy-develop.yml
@@ -12,18 +12,13 @@ jobs:
                 node-version: [10.x]
 
         steps:
-            - uses: actions/checkout@v2
+            - uses: actions/upload-artifact@v2
             - name: Use Node.js ${{ matrix.node-version }}
               uses: actions/setup-node@v1
+              path: downloads
               with:
                   node-version: ${{ matrix.node-version }}
             - run: npm ci
             - run: npm run build
             - run: mkdir downloads
-            - run: |
-                 cp -r bitshares-ui/build/dist/* downloads
-                 cd ..
-                uses: actions/upload-artifact@v2
-                with: 
-                  name: assets-for-download
-                  path: downloads
+            - run: cp -r build/dist/* downloads
