--- a/.github/workflows/npm-build-and-deploy-develop.yml
+++ b/.github/workflows/npm-build-and-deploy-develop.yml
@@ -21,5 +21,5 @@ jobs:
             - run: npm run build
             - uses: actions/upload-artifact@v2
               with:
-                name: my-artifact
+                name: bitshares-ui
                 path: build/dist/ # or path/to/artifact
